Snapshot only actual cutting plans without any surrounding white space (Close #3)